tests/jtrrouter/errors/sinks/deprecated__multiple_sinks/errors.jtrrouter
Warning: Please note that using ';' as list separator is deprecated and not accepted anymore.
Error: The edge 'end;left2end;right2end' declared as a sink is not known.
Quitting (on error).
